--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         <div class="container">
             <div class="section_title">
                 <div class="section_left">
+                    <div class="x-oqi">
 <h3 style="padding: 25px 0px;">Последние новости</h3>
 <ul class="section_list">
     <li class="section-list">
@@ -228,12 +229,40 @@
     </span>
         </span></li>
 </ul>
-<button style="width: 160px; height: 30px; font-size: 18px; color: white; background-color: #295093;margin-top: 20px ; padding: 20px 15px;">
-    Больше новостей
-</button>
+<div style="text-align: center;" class="btn_content">
+    <button style=" font-size: 18px; color: white; background-color: #295093;margin-top: 20px ; padding:10px 20px ; border: none;">
+        Больше новостей
+    </button>
+</div> </div>
                 </div>
                 <div class="section_right">
-
+                    <div class="x-oqi">
+<ul class="right_title">
+    <li class="right-title">
+        <h3>Cамые популярные новости</h3>
+        <p>По факту прорыва Сардобинского  <br>водохранилища <br>
+            возбуждено уголовное дело</p>
+            <small>11:31 / 15.05.2020</small>
+    </li>
+    <li class="right-title">
+        <p>По факту прорыва Сардобинского <br>водохранилища <br>
+            возбуждено уголовное дело</p>
+            <small>11:31 / 15.05.2020</small>
+    </li>
+    <li class="right-title">
+        <p>По факту прорыва Сардобинского <br>водохранилища <br>
+            возбуждено уголовное дело</p>
+            <small>11:31 / 15.05.2020</small>
+    </li>
+    <li  class="right-title">
+        <p>По факту прорыва Сардобинского <br>водохранилища <br>
+            возбуждено уголовное дело</p>
+            <small>11:31 / 15.05.2020</small>
+    </li>
+</ul>
+<div class="sec_tion">
+    <img src="./img/ucell.svg" alt="">
+</div</div>
                 </div>
             </div>
         </div>
