--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
             возбуждено уголовное дело</p>
             <small>11:31 / 15.05.2020</small>
     </li>
-    <li  class="right-title">
+    <li style="line-height: 22px;
+padding: 15px 0px;">
         <p>По факту прорыва Сардобинского <br>водохранилища <br>
             возбуждено уголовное дело</p>
             <small>11:31 / 15.05.2020</small>
@@ -267,5 +268,13 @@
             </div>
         </div>
      </section>
+     <!-- futer qism -->
+      <footer>
+        <div class="container">
+            <div class="footer_img">
+                <img style="width: 100%;" src="./img/futer_foto.svg" alt="">
+            </div>
+        </div>
+      </footer>
 </body>
 </html>
