--- a/index.html
+++ b/index.html
@@ -7,33 +7,40 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <nav>
-        <div class="nav_container">
-            <ul class="icon">
-                <li class="list_icon">
-                    <img src="./img/logo.svg" alt="">
-                </li>
-                <li class="list_icon">
-                    <img src="./img/$ 10137.2 P 138.26 E 10988.72.svg" alt="">
-                </li>
-            </ul>
-            <ul class="logo">
-                <li class="list_logo">
-                    <img src="./img/search.svg" alt="">
-                </li>
-                <li  style="display: flex;align-items: center; gap: 10px; padding:20px 5px ;" class="list_logo">
-                    <img src="./img/rubayroq.svg" alt="">
-                    <img src="./img/РУ.svg" alt="">
-                </li>
-                <li class="list_logo">
-                    <button class="nav_btn" style="display: flex; align-items: center; gap: 10px;">
-                        <img src="./img/btn.svg" alt="">
-                        <h3>Подписатся</h3>
-                    </button>
-                </li>
-            </ul>
-        </div>
-    </nav>
+</head>
+<body>
+    <header>
+        <nav>
+            <div class="nav_container">
+                <ul class="icon">
+                    <li class="list_icon">
+                        <img src="./img/logo.svg" alt="">
+                    </li>
+                    <li class="list_icon">
+                        <img src="./img/$ 10137.2 P 138.26 E 10988.72.svg" alt="">
+                    </li>
+                </ul>
+                <ul class="logo">
+                    <li class="list_logo">
+                        <img src="./img/search.svg" alt="">
+                    </li>
+                    <li style="display: flex;align-items: center; gap: 10px; padding:20px 5px;" class="list_logo">
+                        <img src="./img/rubayroq.svg" alt="">
+                        <img src="./img/РУ.svg" alt="">
+                    </li>
+                    <li class="list_logo">
+                        <button class="nav_btn" style="display: flex; align-items: center; gap: 10px;">
+                            <img src="./img/btn.svg" alt="">
+                            <h3>Подписатся</h3>
+                        </button>
+                    </li>
+                </ul>
+                <div class="menu_bar">
+                    <i class="fa fa-bars"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
     <!-- header qismi -->
     <header>
 <div class="container">
@@ -331,5 +338,6 @@ padding: 15px 0px;">
         </div>
 
       </footer>
+      <script src="./main.js"></script>
 </body>
 </html>
